Fix CSS so that list of content connections doesn't get hidden in the overflow.

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -794,6 +794,14 @@ span[class^="icon-"], span[class*=" icon-"] {
 	}
 }
 
+.accounts {
+	.right-pane {
+		.right-pane-content {
+			min-height: 600px;
+		}
+	}
+}
+
 .user-editor{
 	margin: 75px 25px;
 }
